body and window overflow fixed

--- a/src/styles/_card.scss
+++ b/src/styles/_card.scss
@@ -60,8 +60,8 @@
 .cards-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
-  gap: 4rem;
+  // justify-content: space-around;
+  gap: 3rem;
   position: relative;
   margin: 0 2rem;
 }
@@ -82,7 +82,7 @@
   background: var(--gray);
   height: 100%;
   width: 80%;
-  overflow-x: scroll;
+  overflow-y: scroll;
   position: absolute;
   color: var(--white);
   padding: 1rem;
@@ -128,6 +128,7 @@
 .nutrients-row-container {
   display: flex;
   justify-content: space-between;
+  margin-top: auto;
 
   h4 {
     color: var(--lime-green);
