--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -17,6 +17,7 @@ body {
   line-height: 1.3;
   background: var(--charcoal);
   color: var(--white);
+  overflow: visible;
 }
 
 ul {
