--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -29,6 +29,7 @@ body {
   line-height: 1.3;
   background: var(--charcoal);
   color: var(--white);
+  overflow: visible;
 }
 
 ul {
@@ -488,8 +489,7 @@ input {
 .cards-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
-  gap: 4rem;
+  gap: 3rem;
   position: relative;
   margin: 0 2rem;
 }
@@ -511,7 +511,7 @@ input {
   background: var(--gray);
   height: 100%;
   width: 80%;
-  overflow-x: scroll;
+  overflow-y: scroll;
   position: absolute;
   color: var(--white);
   padding: 1rem;
@@ -557,6 +557,7 @@ input {
 .nutrients-row-container {
   display: flex;
   justify-content: space-between;
+  margin-top: auto;
 }
 .nutrients-row-container h4 {
   color: var(--lime-green);
